Sat Dec 11 14:08:06 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* commands.c (DefineInt_RelocUpdater, DefineReal_RelocUpdater): Add
	check on operator Op_add being used. Add check on Reloc_Create return
	value.
	* m_cpuctrl.c (Branch_RelocUpdater, ADR_RelocUpdater): Likewise.
	* m_cpumem.c (DestMem_RelocUpdater): Likewise.
	* code.c (Code_EvalLowest): Allow ValueSymbol for Op_neg.
	* reloc.c (Reloc_Create): Add check on negative symbols.  Simplify
	code.
	(relocAOFOutput, relocELFOutput): Remove FIXMEs.

Thu Dec  9 01:24:47 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* put.c (putDataFloat): Write out double FPA value correctly on non-ARM
	hosts.
	* lex.c (lexfloat): Remove.
	(lexGetPrim): Use strtod for enhanced precision float reading. Support
	floating point number starting with a period.
	* regression/tests_pass/dcfs_dcfd.s: Added.

Tue Dec  7 23:57:07 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	Start of v2.00 : too many changes to list them in detail, but:
	- Rewrote relocation code, removal of ValueLateLabel.
	- Significantly reworked the 'Code' evaluation.
	- Previously known broken test cases are now working.

Tue Nov 16 23:25:13 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/operator_relational.s: Fix the boolean tests.

Tue Nov  9 12:41:48 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* commands.c (c_fn, c_rn, c_cn): Improve error message.
	(symFlag): Change return type to bool.  Add comment.
	(c_globl,c_strong,c_keep): Tail call symFlag.
	(c_import): Fix comment.  Use Input_Match instead of inputGet.
	* decode.c (decode): Deal with empty lines.
	* asm.c (assemble): Let decode deal with empty lines.
	* macros.c (c_macro): Report file and line number of previous
	defined macro with same name.
	* output.c (writeEntry, outputAof): Cleanup.
	* m_cpu.c (lhsrhs): Cleanup.
	* aoffile.h: Make use of uint32_t instead of unsigned int.
	* whileif.c (if_skip): Early skip empty lines.